--- a/Front-end/app/src/main/res/layout/fragment_makecardtwo.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardtwo.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="one"
+        android:text="two"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
