--- a/Front-end/app/src/main/res/menu/menu_bottomnav.xml
+++ b/Front-end/app/src/main/res/menu/menu_bottomnav.xml
@@ -4,15 +4,19 @@
     <item
         android:id="@+id/menu_home"
         android:title="@string/menu_home"
-        android:icon="@drawable/ic_baseline_home_24" />
+        android:icon="@drawable/ic_baseline_home_24"
+         />
     <item
         android:id="@+id/menu_make"
-        android:title="@string/menu_make" />
+        android:title="@string/menu_make"
+        android:icon="@drawable/ic_baseline_home_24" />
     <item
         android:id="@+id/menu_friend"
-        android:title="@string/menu_friend" />
+        android:title="@string/menu_friend"
+        android:icon="@drawable/ic_baseline_home_24"/>
     <item
         android:id="@+id/menu_mypage"
-        android:title="@string/menu_mypage" />
+        android:title="@string/menu_mypage"
+        android:icon="@drawable/ic_baseline_home_24"/>
 
 </menu>
