--- a/Front-end/app/src/main/res/layout/fragment_home.xml
+++ b/Front-end/app/src/main/res/layout/fragment_home.xml
@@ -6,13 +6,12 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_mycards"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
