--- a/Front-end/app/src/main/res/layout/fragment_makecardone.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardone.xml
@@ -4,13 +4,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="one"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="240dp"
+        android:layout_height="434dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardBackgroundColor="@color/teal_200"
+        android:elevation="10dp"
+        app:cardCornerRadius="15dp"
+        android:layout_margin="20dp"
+        >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            app:srcCompat="@drawable/mickey"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+        />
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="이름"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="220dp"
+            />
+
+        <TextView
+            android:id="@+id/tvExplain"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="270dp"
+            android:text="한줄소개" />
+
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Name"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="215dp"
+            android:background="@color/white"
+            />
+
+        <EditText
+            android:id="@+id/etName2"
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="300dp"
+            android:hint="Explain yourself"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:lines="5"
+            android:maxLines="5"
+            android:minLines="3"
+            android:scrollbars="vertical"
+            android:background="@color/white"
+            />
+
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
