--- a/Front-end/app/src/main/res/layout/fragment_makecardthree.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardthree.xml
@@ -128,4 +128,11 @@
             android:scrollbars="vertical"
             />
     </androidx.cardview.widget.CardView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="저장하기"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
