--- a/Front-end/app/src/main/res/layout/fragment_makecardone.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardone.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F5F5F5">
 
     <androidx.cardview.widget.CardView
         android:layout_width="240dp"
@@ -11,7 +12,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="@color/white"
         android:elevation="10dp"
         app:cardCornerRadius="15dp"
         android:layout_margin="20dp"
