docs: 명함 이미지 변경 및 하단 내비게이션 아이콘 변경

--- a/Front-end/app/src/main/res/layout/activity_main.xml
+++ b/Front-end/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_bottomnav"
-        app:labelVisibilityMode="labeled" />
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@drawable/menu_selector_color"
+        app:itemTextColor="@drawable/menu_selector_color"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
