--- a/Front-end/app/src/main/res/values/themes.xml
+++ b/Front-end/app/src/main/res/values/themes.xml
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:ignore="DuplicateDefinition">@color/white</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">#F5F5F5</item>
     </style>
 </resources>
