--- a/Front-end/app/src/main/res/layout/fragment_makecardone.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardone.xml
@@ -27,51 +27,35 @@
             android:layout_marginTop="40dp"
         />
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="이름"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="220dp"
-            />
-
-        <TextView
-            android:id="@+id/tvExplain"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="270dp"
-            android:text="한줄소개" />
-
         <EditText
             android:id="@+id/etName"
             android:layout_width="150dp"
             android:layout_height="30dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Name"
-            android:layout_marginLeft="70dp"
+            android:layout_marginLeft="45dp"
             android:layout_marginTop="215dp"
-            android:background="@color/white"
-            />
+            android:paddingLeft="10dp"
+            android:background="@drawable/layout_et"
+            android:ems="10"
+            android:hint="이름"
+            android:inputType="textPersonName"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         <EditText
             android:id="@+id/etName2"
             android:layout_width="180dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="300dp"
-            android:hint="Explain yourself"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="270dp"
+            android:padding="10dp"
+            android:background="@drawable/layout_et"
             android:gravity="top"
+            android:hint="한줄 소개를 입력해주세요."
             android:inputType="textMultiLine"
             android:lines="5"
             android:maxLines="5"
             android:minLines="3"
             android:scrollbars="vertical"
-            android:background="@color/white"
-            />
-
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
