--- a/Front-end/app/src/main/res/layout/fragment_makecardzero.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecardzero.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="#F1F1F1"
+    >
     <TextView
         android:id="@+id/zero_intro"
-        android:layout_width="234dp"
-        android:layout_height="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="mm님의\n개성적인 명함을 제작해 보세요!"
-        android:layout_marginTop="13dp"
-        android:layout_marginLeft="16dp"
+        android:textSize="20dp"
+        android:layout_marginTop="30dp"
         />
     <!-- 내 명함 만들기  -->
     <RelativeLayout
         android:id="@+id/zero_my"
         android:background="@drawable/round_corner_my"
-        android:layout_width="328dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="107dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:layout_below="@+id/zero_intro"
+        android:layout_marginTop="40dp"
         android:paddingTop="23dp"
         android:paddingLeft="21dp"
+        android:paddingBottom="23dp"
         >
         <TextView
             android:id="@+id/my_title"
@@ -39,24 +44,33 @@
             />
         <TextView
             android:id="@+id/my_tag"
-            android:layout_width="85dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="# 나를 나답게"
             android:layout_below="@+id/my_content"
             android:layout_marginTop="14dp"
+            android:textColor="#00D282"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/mickey"
+            android:layout_below="@+id/my_tag"
+            android:layout_marginLeft="245dp"
             />
     </RelativeLayout>
     <!-- 친구 명함 만들기  -->
     <RelativeLayout
         android:id="@+id/zero_friend"
-        android:layout_width="328dp"
-        android:layout_height="170dp"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
         android:background="@drawable/round_corner_friend"
         android:layout_below="@+id/zero_my"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="21dp"
-        android:paddingLeft="16dp"
-        android:paddingTop="19dp"
+        android:layout_marginTop="50dp"
+        android:paddingTop="23dp"
+        android:paddingLeft="21dp"
+        android:paddingBottom="23dp"
         >
         <TextView
             android:id="@+id/friend_title"
@@ -88,7 +102,16 @@
             android:layout_height="wrap_content"
             android:text="# 내 친구는 이런 사람이에요"
             android:layout_below="@+id/friend_content2"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#FFF383"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/mickey"
+            android:layout_below="@+id/friend_content2"
+            android:layout_marginLeft="245dp"
             />
     </RelativeLayout>
 </RelativeLayout>
