--- a/Front-end/app/src/main/res/layout/activity_main.xml
+++ b/Front-end/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:itemBackground="@color/white"
         app:menu="@menu/menu_bottomnav"
         app:labelVisibilityMode="labeled"
         app:itemIconTint="@drawable/menu_selector_color"
