--- a/Front-end/app/src/main/res/layout/item_mycard.xml
+++ b/Front-end/app/src/main/res/layout/item_mycard.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/mycards"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -21,8 +22,8 @@
 
         <ImageView
             android:id="@+id/img_mycard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="250dp"
+            android:layout_height="450dp" />
 
     </androidx.cardview.widget.CardView>
 
