--- a/Front-end/app/src/main/res/layout/fragment_makecard.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecard.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tabSelectedTextColor="#00D282"
+        />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_main"
@@ -22,51 +24,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_main" />
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        >-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_fragment1"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="앞면" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_fragment2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="뒷면" />-->
-<!--    </LinearLayout>-->
-
-<!--    <FrameLayout-->
-<!--        android:id="@+id/frame_fragment"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/linearLayout">-->
-
-<!--    </FrameLayout>-->
-
-<!--    <Button-->
-<!--        android:id="@+id/btn"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="완료하기"-->
-
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
