--- a/Front-end/app/src/main/res/layout/item_friendcard.xml
+++ b/Front-end/app/src/main/res/layout/item_friendcard.xml
@@ -23,9 +23,7 @@
         <TextView
             android:id="@+id/tx_friendcard"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            />
+            android:layout_height="match_parent" />
 <!--            app:layout_constraintTop_toTopOf="parent"-->
 <!--            app:layout_constraintBottom_toBottomOf="parent"-->
 <!--            app:layout_constraintStart_toStartOf="parent"-->
