--- a/Front-end/app/src/main/res/layout/fragment_mypage.xml
+++ b/Front-end/app/src/main/res/layout/fragment_mypage.xml
@@ -3,31 +3,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F5F5F5">
 
-    <TextView
-        android:id="@+id/tvProfile"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="30dp"
-        android:gravity="center"
-        android:text="사용자 프로필"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    <LinearLayout
+        android:id="@+id/linearLayoutBar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/white"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageViewbar"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/bar"
+            tools:layout_editor_absoluteX="121dp"
+            tools:layout_editor_absoluteY="536dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutIntro"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="100dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tvProfile"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:text="명명이 님 안녕하세요."
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutWheel"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginLeft="350dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageViewWheel"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/wheel"
+            tools:layout_editor_absoluteX="121dp"
+            tools:layout_editor_absoluteY="536dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayoutImg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="330dp"
+        android:layout_marginBottom="360dp"
+        android:background="@color/white"
         android:orientation="vertical"
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/linearLayout"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -35,7 +88,7 @@
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/ic_baseline_home_24"
+            app:srcCompat="@drawable/ic1"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
 
@@ -43,7 +96,7 @@
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/ic_baseline_home_24"
+            app:srcCompat="@drawable/ic2"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
 
@@ -51,7 +104,7 @@
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/ic_baseline_home_24"
+            app:srcCompat="@drawable/ic3"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
 
@@ -59,7 +112,7 @@
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/ic_baseline_home_24"
+            app:srcCompat="@drawable/ic4"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
     </LinearLayout>
@@ -68,8 +121,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="330dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="360dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
