--- a/Front-end/app/src/main/res/layout/item_friendcard.xml
+++ b/Front-end/app/src/main/res/layout/item_friendcard.xml
@@ -8,8 +8,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="120dp"
-        android:layout_height="190dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="0dp"
         android:elevation="10dp"
         app:cardCornerRadius="15dp"
@@ -20,8 +20,8 @@
 
         <ImageView
             android:id="@+id/img_fricard"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="90dp"
+            android:layout_height="160dp" />
     </androidx.cardview.widget.CardView>
 
     <TextView
