--- a/Front-end/app/src/main/res/layout/fragment_mypage.xml
+++ b/Front-end/app/src/main/res/layout/fragment_mypage.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/white"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,26 +23,12 @@
             app:srcCompat="@drawable/bar"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutIntro"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="100dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
         <TextView
             android:id="@+id/tvProfile"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:layout_weight="@integer/material_motion_duration_long_1"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
             android:background="@color/white"
             android:gravity="center_vertical"
             android:text="명명이 님 안녕하세요."
@@ -50,27 +36,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutWheel"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="350dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
         <ImageView
             android:id="@+id/imageViewWheel"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:layout_marginEnd="20dp"
             app:srcCompat="@drawable/wheel"
             tools:layout_editor_absoluteX="121dp"
             tools:layout_editor_absoluteY="536dp" />
+
     </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/linearLayoutImg"
