--- a/Front-end/app/src/main/res/layout/fragment_home.xml
+++ b/Front-end/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="30dp"
+        android:src="@drawable/logo"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/subname"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toStartOf="@+id/logo"
+        android:src="@drawable/subname"/>
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_mycards"
         android:layout_width="match_parent"
