--- a/Front-end/app/src/main/res/layout/fragment_makecard.xml
+++ b/Front-end/app/src/main/res/layout/fragment_makecard.xml
@@ -13,6 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tabSelectedTextColor="#00D282"
+        android:theme="@style/TabTheme"
         />
 
     <androidx.viewpager2.widget.ViewPager2
