--- a/Front-end/app/src/main/res/values/style.xml
+++ b/Front-end/app/src/main/res/values/style.xml
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="colorPrimary">#00D282</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/black</item>
+
+        <item name="colorAccent">@color/white</item>
+    </style>
 </resources>
